--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
      "start": "npm run server",
-      "server": "node index.js",
+     "server": "node index.js"
     
   },
   "author": "",
