--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,3 @@
-"headers": [
-  {
-    "source": "/",
-    "headers": [
-      { "key": "Access-Control-Allow-Credentials", "value": "true" },
-      { "key": "Access-Control-Allow-Origin", "value": "https://admin.marqueberry.com" },
-      { "key": "Access-Control-Allow-Origin", "value": "https://marqueberry.com" },
-      { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-      { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
-    ]
-  },
-  {
-    "source": "/(.*)/(.*)",
-    "headers": [
-      { "key": "Access-Control-Allow-Credentials", "value": "true" },
-      { "key": "Access-Control-Allow-Origin", "value": "https://admin.marqueberry.com" },
-      { "key": "Access-Control-Allow-Origin", "value": "https://marqueberry.com" },
-      { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-      { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
-    ]
-  }
-]
 {
   "version": 2,
   "name": "test-universal",
@@ -42,8 +20,8 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://marqueberry.com" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://admin.marqueberry.com" }
+        { "key": "Access-Control-Allow-Origin", "value": "http://marqueberry.com" },
+        { "key": "Access-Control-Allow-Origin", "value": "http://admin.marqueberry.com" }
       ]
     },
     {
@@ -52,8 +30,8 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://marqueberry.com" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://admin.marqueberry.com" }
+        { "key": "Access-Control-Allow-Origin", "value": "http://marqueberry.com" },
+        { "key": "Access-Control-Allow-Origin", "value": "http://admin.marqueberry.com" }
       ]
     }
   ]
