--- a/vercel.json
+++ b/vercel.json
@@ -20,8 +20,7 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" },
-        { "key": "Access-Control-Allow-Origin", "value": "http://marqueberry.com" },
-        { "key": "Access-Control-Allow-Origin", "value": "http://admin.marqueberry.com" }
+        { "key": "Access-Control-Allow-Origin", "value": "*" }  
       ]
     },
     {
@@ -30,8 +29,7 @@
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" },
-        { "key": "Access-Control-Allow-Origin", "value": "http://marqueberry.com" },
-        { "key": "Access-Control-Allow-Origin", "value": "http://admin.marqueberry.com" }
+        { "key": "Access-Control-Allow-Origin", "value": "*" }  
       ]
     }
   ]
