--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "stream": "^0.0.2"
   }
 }
