--- a/package.json
+++ b/package.json
@@ -11,18 +11,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "aws-sdk": "^2.1459.0",
+    "axios": "^1.6.2",
     "basic-ftp": "^5.0.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
     "path": "^0.12.7",
-    "stream": "^0.0.2"
+    "razorpay": "^2.9.2",
+    "stream": "^0.0.2",
+    "underscore": "^1.13.6"
   }
 }
