--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
     "path": "^0.12.7",
+    "sharp": "^0.33.2",
     "stream": "^0.0.2",
     "underscore": "^1.13.6"
   }
