--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "aws-sdk": "^2.1459.0",
     "axios": "^1.6.2",
@@ -32,6 +33,7 @@
     "path": "^0.12.7",
     "sharp": "^0.33.2",
     "stream": "^0.0.2",
+    "thumbsupply": "^0.4.0",
     "underscore": "^1.13.6"
   }
 }
