--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
     "path": "^0.12.7",
+    "razorpay": "^2.9.4",
     "sharp": "^0.33.2",
     "stream": "^0.0.2",
     "thumbsupply": "^0.4.0",
