--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "aws": "^0.0.3-2",
+    "aws-cli": "^0.0.2",
     "aws-sdk": "^2.1459.0",
     "axios": "^1.6.2",
     "basic-ftp": "^5.0.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cli": "^1.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
