--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.6.2",
     "basic-ftp": "^5.0.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cli": "^1.0.1",
     "cors": "^2.8.5",
